restructure readsimulationfile to use weather enum